<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_head_white"/>
    <!--<LinearLayout-->
        <!--android:layout_marginTop="@dimen/dp80"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginRight="@dimen/dp40"-->
        <!--android:layout_marginLeft="@dimen/dp40"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:textColor="@color/black33"-->
            <!--android:textSize="@dimen/dp32"-->
            <!--android:text="@string/phone"-->
            <!--android:layout_width="@dimen/d100"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<EditText-->
            <!--android:id="@+id/et_phone"-->
            <!--android:layout_marginLeft="@dimen/dp40"-->
            <!--android:textSize="@dimen/dp32"-->
            <!--android:background="@null"-->
            <!--android:textColorHint="@color/black99"-->
            <!--android:hint="@string/hint_phone"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->
    <!--<View-->
        <!--android:layout_marginTop="@dimen/dp20"-->
        <!--android:layout_marginRight="@dimen/dp40"-->
        <!--android:layout_marginLeft="@dimen/dp40"-->
        <!--android:background="@color/black_aa"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1px"/>-->
    <LinearLayout
        android:layout_marginTop="@dimen/dp80"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black33"
            android:textSize="@dimen/dp32"
            android:text="@string/yzm"
            android:layout_width="@dimen/d100"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_yzm"
            android:layout_marginLeft="@dimen/dp40"
            android:textSize="@dimen/dp32"
            android:background="@null"
            android:textColorHint="@color/black99"
            android:hint="@string/hint_yzm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_yzm"
            android:textColor="@color/com_blue"
            android:textSize="@dimen/dp26"
            android:text="@string/send_yzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:background="@color/black_aa"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:layout_marginTop="@dimen/dp80"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black33"
            android:textSize="@dimen/dp32"
            android:text="@string/pwd"
            android:layout_width="@dimen/d100"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_pwd"
            android:layout_marginLeft="@dimen/dp40"
            android:textSize="@dimen/dp32"
            android:background="@null"
            android:textColorHint="@color/black99"
            android:hint="@string/hint_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:background="@color/black_aa"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:layout_marginTop="@dimen/dp80"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black33"
            android:textSize="@dimen/dp32"
            android:text="@string/hint_yqm"
            android:layout_width="@dimen/d100"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_yqm"
            android:layout_marginLeft="@dimen/dp40"
            android:textSize="@dimen/dp32"
            android:background="@null"
            android:textColorHint="@color/black99"
            android:hint="请输入邀请码(选填)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:background="@color/black_aa"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <Button
        android:id="@+id/bt_login"
        android:textSize="@dimen/dp38"
        android:background="@drawable/bt_blue_circle"
        android:textColor="@color/white"
        android:text="@string/reg"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginTop="@dimen/d100"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80" />
</LinearLayout>